--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,15 +47,19 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
+    - name: Read version
+      id: version
+      run: echo "VERSION=$(cat version.txt)" >> $GITHUB_OUTPUT
+    
     - name: Create or Update Release
       uses: softprops/action-gh-release@v1
       with:
         files: |
           docs/firmware/filament_turner.bin
-        tag_name: v0.99
-        name: v0.99 - Filament Turner Firmware
+        tag_name: v${{ steps.version.outputs.VERSION }}
+        name: v${{ steps.version.outputs.VERSION }} - Filament Turner Firmware
         body: |
-          Filament Turner Controller Firmware v0.99
+          Filament Turner Controller Firmware v${{ steps.version.outputs.VERSION }}
           
           **Features:**
           - 720°/hour continuous rotation
